@@ -1,1 +1,1 @@
-DIST fvwm-crystal-3.2.7.tar.gz 4461495 SHA256 fd3ef491a092af36060516907628744545486cb6f33bcdd738ffc9e2bb73b6e1 SHA512 4c5608d4b47df65cf8bcc4d17137dfaa006f1d332a9e33fec77e15ab7872449d94e2b9cac8e667cfd702032f6bada1327f0f14d113fd07fe0aa130ec6838f560 WHIRLPOOL ddb8f8bfbb2e9af2422db4591ab3aeeb6c1bc76de320ae1673c226bd2dd17787238fb37d47cf3901ab20e7ead05b98205895aadc6eca023398b69b6cbe2580c4
+DIST fvwm-crystal-3.3.0.tar.gz 4679680 SHA256 b7fad20964e78d9ed481fbc06efe467d6ecfaaef9de3b49cafe8191f114fb9bb SHA512 a1f417a224f3c45203fbb2844521437192a4e4fbfe9f90e871242266b336b427fc4cbd8dc9dc94c66e8da1f0d463f305379db753f85c101905b338e1245637ea WHIRLPOOL 8d694ff9b988dc0984339dfb7607c90caf1ed13e753457281039fd05958847bfe2049bfe6c9b36f76fe6c632ab5e6b482c8607829149ebccf471d26aaa7447ef
