@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*fvwm-crystal-3.3.0 (23 Jan 2014)
+
+  23 Jan 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild
+
 *fvwm-crystal-3.2.7 (12 Oct 2013)
 
   12 Oct 2013; Martin Väth <martin@mvath.de>:
